# AdventOfCode2020

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
01/: CMakeLists.txt  advent01.cpp  report_repair.cpp  report_repair.hpp  report_repair.t.cpp
02/: CMakeLists.txt  advent02.cpp  password_philosophy.cpp  password_philosophy.hpp  password_philosophy.t.cpp
03/: CMakeLists.txt  advent03.cpp  toboggan_trajectory.cpp  toboggan_trajectory.hpp  toboggan_trajectory.t.cpp
04/: CMakeLists.txt  advent04.cpp  passport_processing.cpp  passport_processing.hpp  passport_processing.t.cpp
05/: CMakeLists.txt  advent05.cpp  binary_boarding.cpp  binary_boarding.hpp  binary_boarding.t.cpp
06/: CMakeLists.txt  advent06.cpp  custom_customs.cpp  custom_customs.hpp  custom_customs.t.cpp
07/: CMakeLists.txt  advent07.cpp  handy_haversacks.cpp  handy_haversacks.hpp  handy_haversacks.t.cpp
08/: CMakeLists.txt  advent08.cpp  handheld_halting.cpp  handheld_halting.hpp  handheld_halting.t.cpp
09/: CMakeLists.txt  advent09.cpp  encoding_error.cpp  encoding_error.hpp  encoding_error.t.cpp
10/: CMakeLists.txt  adapter_array.cpp  adapter_array.hpp  adapter_array.t.cpp  advent10.cpp
11/: CMakeLists.txt  advent11.cpp  seating_system.cpp  seating_system.hpp  seating_system.t.cpp
12/: CMakeLists.txt  advent12.cpp  rain_risk.cpp  rain_risk.hpp  rain_risk.t.cpp
13/: CMakeLists.txt  advent13.cpp  shuttle_search.cpp  shuttle_search.hpp  shuttle_search.t.cpp
14/: CMakeLists.txt  advent14.cpp  docking_data.cpp  docking_data.hpp  docking_data.t.cpp
15/: CMakeLists.txt  advent15.cpp  rambunctious_recitation.cpp  rambunctious_recitation.hpp  rambunctious_recitation.t.cpp
16/: CMakeLists.txt  advent16.cpp  ticket_translation.cpp  ticket_translation.hpp  ticket_translation.t.cpp
17/: CMakeLists.txt  advent17.cpp  conway_cubes.cpp  conway_cubes.hpp  conway_cubes.t.cpp
18/: CMakeLists.txt  advent18.cpp  operation_order.cpp  operation_order.hpp  operation_order.t.cpp
19/: CMakeLists.txt  advent19.cpp  monster_messages.cpp  monster_messages.hpp  monster_messages.t.cpp
20/: CMakeLists.txt  advent20.cpp  jurassic_jigsaw.cpp  jurassic_jigsaw.hpp  jurassic_jigsaw.t.cpp
21/: CMakeLists.txt  advent21.cpp  allergen_assessment.cpp  allergen_assessment.hpp  allergen_assessment.t.cpp
22/: CMakeLists.txt  advent22.cpp  crab_combat.cpp  crab_combat.hpp  crab_combat.t.cpp
23/: CMakeLists.txt  advent23.cpp  crab_cups.cpp  crab_cups.hpp  crab_cups.t.cpp
24/: CMakeLists.txt  advent24.cpp  lobby_layout.cpp  lobby_layout.hpp  lobby_layout.t.cpp
25/: CMakeLists.txt  advent25.cpp  combo_breaker.cpp  combo_breaker.hpp  combo_breaker.t.cpp
